src/objects/WGUDegreeProgram__c.object
<CustomObject>
    <description>Represents a program outline for students to follow in their way to get a degree.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the Degree Program is active and can be used.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CatalogTerm__c</fullName>
        <description>The catalog Term this program was built. This is the Major Version in the PAMS database.</description>
        <label>Catalog Term</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concentration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The concentration this degree program supports.</description>
        <label>Concentration</label>
        <referenceTo>KeyValue__c</referenceTo>
        <relationshipLabel>WGU Degree Programs (Concentration)</relationshipLabel>
        <relationshipName>WGUDegreeProgramsForConcentration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The degree this program applies.</description>
        <label>Degree</label>
        <referenceTo>KeyValue__c</referenceTo>
        <relationshipLabel>WGU Degree Programs (Degree)</relationshipLabel>
        <relationshipName>WGUDegreeProgramsForDegree</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The department this degree applies.</description>
        <label>Department</label>
        <referenceTo>KeyValue__c</referenceTo>
        <relationshipLabel>WGU Degree Programs (Department)</relationshipLabel>
        <relationshipName>WGUDegreeProgramsForDepartment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effort__c</fullName>
        <label>Effort</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HasFieldExp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this program need field experience.</description>
        <label>Has FieldExperience</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LevelTitle__c</fullName>
        <formula>ProgramLevel__r.Value__c</formula>
        <label>Level Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The major the this program applies.</description>
        <label>Major</label>
        <referenceTo>KeyValue__c</referenceTo>
        <relationshipLabel>WGU Degree Programs (Major)</relationshipLabel>
        <relationshipName>WGUDegreeProgramsForMajor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnStudentApplicationForm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a field used by the marketing website to determine if a Degree Program should be made available for selection on the student application form to the university.</description>
        <label>On Student Application Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PAMSID__c</fullName>
        <description>The ID that represents the program in PAMS.</description>
        <externalId>true</externalId>
        <label>PAMS ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProgramLevel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Level</label>
        <referenceTo>KeyValue__c</referenceTo>
        <relationshipLabel>WGU Degree Programs</relationshipLabel>
        <relationshipName>WGU_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <description>The Minor Version number from the PAMS database.</description>
        <label>Revision</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>The version field from the PAMS database. Represents the sequence order in which versions of a Degree Program are generated.</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TuitionPerTerm__c</fullName>
        <label>TuitionPerTerm</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>WGU Degree Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CatalogTerm__c</columns>
        <columns>HasFieldExp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WGU Degree Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>